<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/elevationLow"
    app:cardElevation="@dimen/elevationMedium"
    app:cardMaxElevation="@dimen/elevationMedium"
    app:contentPadding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.devbatch.ecommerce.widgets.TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_title"
            android:textColor="@color/md_light_blue_800"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textline"/>

        <com.devbatch.ecommerce.widgets.TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/address_name"
            android:textColor="@color/Black"/>

        <com.devbatch.ecommerce.widgets.TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_address"
            android:textColor="@color/md_grey_700"/>

        <com.devbatch.ecommerce.widgets.TextView
            android:id="@+id/fex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_fex"
            android:textColor="@color/md_grey_700"/>

        <com.devbatch.ecommerce.widgets.TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_phone"
            android:textColor="@color/Black"/>
    </LinearLayout>

</android.support.v7.widget.CardView>