<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin"
    android:paddingEnd="@dimen/margin"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:paddingStart="@dimen/margin">


    <com.devbatch.ecommerce.widgets.AspectLockedImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/logo"
        app:aspectRatio="3" />

    <com.devbatch.ecommerce.widgets.TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:hint="@string/save" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:layout_gravity="center"
        android:orientation="vertical">

        <com.devbatch.ecommerce.widgets.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            app:passwordToggleTint="@color/selector_color_pressed">

            <com.devbatch.ecommerce.widgets.EditText
                android:id="@+id/new_pass"
                style="@style/Widget.App.EditText.TextPassword"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.devbatch.ecommerce.widgets.TextInputLayout>

        <com.devbatch.ecommerce.widgets.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            app:passwordToggleTint="@color/selector_color_pressed">

            <com.devbatch.ecommerce.widgets.EditText
                android:id="@+id/confirm_pass"
                style="@style/Widget.App.EditText.TextPassword"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.devbatch.ecommerce.widgets.TextInputLayout>

        <com.devbatch.ecommerce.widgets.PathwayButton
            android:id="@+id/submit"
            style="@style/Widget.App.Button.Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/save" />
    </LinearLayout>


</RelativeLayout>